<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/detail_activity_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/photo_size"
            android:layout_height="@dimen/photo_size"
            android:layout_margin="3dp"
            android:src="@drawable/ic_photo"/>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_title"
            android:inputType="text"
            android:maxLines="1"
            />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details"
        android:textAppearance="?android:attr/listSeparatorTextViewStyle"/>


    <CheckBox
        android:id="@+id/cb_solved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime_status"/>

    <Button
        android:id="@+id/btn_choose_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"/>

    <Button
        android:id="@+id/btn_choose_criminal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_criminal"/>
</LinearLayout>